Fix heading title spacing for design time

--- a/styles/main.less
+++ b/styles/main.less
@@ -191,7 +191,8 @@ body.affix .cento-header .nav-wrap {
 }
 .cento-header .logo #wsite-title {
   display: block;
-  max-width: 500px;
+  // max-width: 500px;
+  max-width: none;
 }
 .cento-header .logo,
 .cento-header .logo a {
@@ -425,15 +426,15 @@ body.affix .cento-header .nav-wrap {
 }
 
 .wsite-cart-contents .wsite-product-list {
-    display: block;
-    width: 100%;
-    max-height: 75vh;
-    overflow-y: auto;
+  display: block;
+  width: 100%;
+  max-height: 75vh;
+  overflow-y: auto;
 
-    li {
-      width: 100%;
-      display: table;
-    }
+  li {
+    width: 100%;
+    display: table;
+  }
 }
 
 #wsite-mini-cart .wsite-css-aspect {
